--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,8 +6,8 @@
               <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">
               ان الدين عند الله الاسلام
               </h1>
-                <p>المسلم من سلم الناس من لسانه ويده</p>
-                <p>
+                <p class="text-2xl font-semibold text-white uppercase ">المسلم من سلم الناس من لسانه ويده</p>
+                <p class="text-2xl font-semibold text-white uppercase ">
               لا يمكن للمسلم ان يسلم الناس منه حتة يقيم احد اركان الاسلام
                 وهي
                 الشهادة
@@ -17,7 +17,10 @@
                 حج البيت
                 اذا اراد المسلم ان يقود المسلمين فعليه ان يبني اركان الاسلام كلها في نفسه
               </p>
+              <p class="text-2xl font-semibold text-white uppercase ">
+                كُنْتُمْ خَيْرَ أُمَّةٍ أُخْرِجَتْ لِلنَّاسِ تَأْمُرُونَ بِالْمَعْرُوفِ وَتَنْهَوْنَ عَنِ الْمُنْكَرِ وَتُؤْمِنُونَ بِاللَّهِ وَلَوْ آمَنَ أَهْلُ الْكِتَابِ لَكَانَ خَيْرًا لَهُمْ مِنْهُمُ الْمُؤْمِنُونَ وَأَكْثَرُهُمُ الْفَاسِقُونَ
 
+                </p>
                 <button class="w-full px-4 py-2 mt-4 text-sm font-medium text-white uppercase transition-colors duration-200 transform bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">Start project</button>
           </div>
       </div>
