--- a/src/app/pages/the-creator/the-creator.component.html
+++ b/src/app/pages/the-creator/the-creator.component.html
@@ -3,4 +3,4 @@
 'max-w-2xl mx-auto my-6 text-center text-gray-300'">
   هو عَلم على الذات الواجب الوجود المستحق لجميع المحامد، وهو اسم الذَّات العليَّة، خالق الأكوان والوجود، وهو الإله الحق لجميع المخلوقات ولا معبود بحق إلَّا هو.
 </p>
-<app-names></app-names>
+<router-outlet></router-outlet>
