--- a/src/app/pages/religions/religions-books/religions-books.component.html
+++ b/src/app/pages/religions/religions-books/religions-books.component.html
@@ -72,3 +72,5 @@
   وحي الاشارة هو الاشارات باليد
   وحي الالهام هذا الوحي موجود عند كل احد حتى الحيوانات والنحل وام موسى
   </p>
+
+<router-outlet></router-outlet>
