--- a/src/app/pages/religions/religions-books/quran/aya/aya.component.html
+++ b/src/app/pages/religions/religions-books/quran/aya/aya.component.html
@@ -1,21 +1,31 @@
 <section
 [ngClass]="styleModeService.mode === 'light' ?
             'bg-white' :
-            'bg-green-900'"
+            'bg-gray-800 '"
 >
   <div class="container px-6 py-16 mx-auto text-center">
-      <div *ngFor="let ayaah of ayatext" class="max-w-lg mx-auto">
-        <p>{{ayaah.aya[0].bismillah}}</p>
+
+<div class="max-w-lg mx-auto">
+        <p>Total Verses: {{ chapter['total_verses'] }}</p>
+        <p>Translation: {{ chapter['translation'] }}</p>
+        <p>Pronunciation: {{ chapter['transliteration'] }}</p>
+        <p>Place Of Revelation: {{ chapter['type'] }}</p>
           <h1
           [ngClass]="styleModeService.mode === 'light' ?
             'text-3xl font-bold text-gray-800 md:text-4xl' :
             'text-3xl font-bold text-white md:text-4xl'"
           >
-            <p>سورة {{ayaah.name}}</p>
+            <p>Name: {{ chapter['name'] }}</p>
 
           </h1>
-          <li *ngFor="let text of ayaah.aya">
-            <a> {{text.text}} </a>
+          <li [ngClass]="styleModeService.mode === 'light' ?
+          ' text-gray-500' :
+          ' text-gray-300'"
+          *ngFor="let verse of chapter['verses']" >
+            <a           [ngClass]="styleModeService.mode === 'light' ?
+            ' text-gray-500' :
+            ' text-gray-300'"
+            > {{verse.text}} </a>
             <label><i class="fas fa-certificate"></i></label>
           </li>
           <p
@@ -32,7 +42,7 @@
           'w-full max-w-sm mx-auto mt-6 bg-transparent border rounded-md border-gray-700 focus-within:ring focus-within:ring-blue-300 focus-within:border-blue-300 focus-within:ring-opacity-40'"
           >
               <form class="flex flex-col md:flex-row">
-                <button (click)="moveright()" type="button" class="h-10 px-4 py-2 m-1 text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
+                <button (click)="moveRight()" type="button" class="h-10 px-4 py-2 m-1 text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400">
                   اللاحق
 
                 </button>
