--- a/src/app/pages/islam/islam.component.html
+++ b/src/app/pages/islam/islam.component.html
@@ -1,8 +1,8 @@
 <div class="py-3 mt-3 -mx-3 overflow-y-auto whitespace-nowrap scroll-hidden">
-  <a [ngClass]="styleModeService.mode === 'light' ?
+  <a *ngFor="let slam of Islam" [ngClass]="styleModeService.mode === 'light' ?
   'mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform hover:text-blue-600 hover:underline md:my-0' :
   'mx-4 text-sm leading-5 transition-colors duration-200 transform text-gray-200 hover:text-blue-400 hover:underline md:my-0'"
-  routerLink="provisions">الأحكام الشرعية</a>
+  routerLink="provisions">{{ slam.name}}</a>
   <a [ngClass]="styleModeService.mode === 'light' ?
   'mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform hover:text-blue-600 hover:underline md:my-0' :
   'mx-4 text-sm leading-5 transition-colors duration-200 transform text-gray-200 hover:text-blue-400 hover:underline md:my-0'"
