--- a/src/app/pages/islam/pillars/pillars.component.html
+++ b/src/app/pages/islam/pillars/pillars.component.html
@@ -1,5 +1,5 @@
 
-<p>islam-pillars works! اركان الاسلام</p>
+<p>pillars works! اركان الاسلام</p>
 <ol><li><a routerLink="wiki/%D8%A7%D9%84%D8%AA%D9%88%D8%AD%D9%8A%D8%AF_%D9%81%D9%8A_%D8%A7%D9%84%D8%A5%D8%B3%D9%84%D8%A7%D9%85" title="التوحيد في الإسلام">شهادة أنّ لا إله إلا الله وأنّ محمداً عبده ورسوله</a></li>
   <li><a routerLink="wiki/%D8%B5%D9%84%D8%A7%D8%A9" title="صلاة">إقامة الصلاة</a></li>
   <li><a routerLink="wiki/%D8%B2%D9%83%D8%A7%D8%A9" title="زكاة">إيتاء الزكاة</a></li>
