--- a/src/app/pages/islam/creeds/creeds.component.html
+++ b/src/app/pages/islam/creeds/creeds.component.html
@@ -10,3 +10,5 @@ https://mawdoo3.com/%D9%85%D8%A7_%D9%87%D9%8A_%D8%A7%D9%84%D8%B9%D9%82%D9%8A%D8%
 <p>هل الايمان بستية الاركان من اركان الايمان!</p>
 لا لانها ستصبح سبعة والسبعة ستصبح ثمانية الى الا نهاية
 وما تثبته نفسك من اختيار فانت مجبور حتى في اختيارك
+
+<router-outlet></router-outlet>
