--- a/src/app/pages/islam/creed/creed.component.html
+++ b/src/app/pages/islam/creed/creed.component.html
@@ -1,9 +1,5 @@
-<div class="py-3 overflow-y-auto whitespace-nowrap scroll-hidden">
-  <a *ngFor="let Knot of Creed" [ngClass]="styleModeService.mode === 'light' ?
-  'mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform hover:text-blue-600 hover:underline md:my-0' :
-  'mx-4 text-sm leading-5 transition-colors duration-200 transform text-gray-200 hover:text-blue-400 hover:underline md:my-0'"
-    [routerLink]=[Knot.routerLink]>{{ Knot['title'] }}</a>
-</div>
+<app-sub-menu></app-sub-menu>
+
 <p>creed works!
 العقيدة هي الايمان
 </p>
