--- a/src/app/pages/islam/muslims/muslims.component.html
+++ b/src/app/pages/islam/muslims/muslims.component.html
@@ -1,3 +1,4 @@
+<app-sub-menu></app-sub-menu>
 
 <div class="py-3 overflow-y-auto whitespace-nowrap scroll-hidden">
   <!-- <a [ngClass]="styleModeService.mode === 'light' ?
@@ -44,10 +45,6 @@
     'mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform hover:text-blue-600 hover:underline md:my-0' :
     'mx-4 text-sm leading-5 transition-colors duration-200 transform text-gray-200 hover:text-blue-400 hover:underline md:my-0'"
     routerLink="ministries">الوزارات</a>
-  <a *ngFor="let muslim of muslims" [ngClass]="styleModeService.mode === 'light' ?
-  'mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform hover:text-blue-600 hover:underline md:my-0' :
-  'mx-4 text-sm leading-5 transition-colors duration-200 transform text-gray-200 hover:text-blue-400 hover:underline md:my-0'"
-  [routerLink]=[muslim.routerLink]>{{ muslim['title'] }}</a>
 </div>
 <router-outlet></router-outlet>
 
