--- a/src/app/pages/islam/pillars/pillars.component.html
+++ b/src/app/pages/islam/pillars/pillars.component.html
@@ -1,9 +1,4 @@
-<div class="py-3 overflow-y-auto whitespace-nowrap scroll-hidden">
-  <a *ngFor="let pillar of pillars" [ngClass]="styleModeService.mode === 'light' ?
-  'mx-4 text-sm leading-5 text-gray-700 transition-colors duration-200 transform hover:text-blue-600 hover:underline md:my-0' :
-  'mx-4 text-sm leading-5 transition-colors duration-200 transform text-gray-200 hover:text-blue-400 hover:underline md:my-0'"
-    [routerLink]=[pillar.routerLink]>{{ pillar['title'] }}</a>
-</div>
+<app-sub-menu></app-sub-menu>
 
 <p>pillars works! اركان الاسلام</p>
 <ol><li><a routerLink="wiki/%D8%A7%D9%84%D8%AA%D9%88%D8%AD%D9%8A%D8%AF_%D9%81%D9%8A_%D8%A7%D9%84%D8%A5%D8%B3%D9%84%D8%A7%D9%85" title="التوحيد في الإسلام">شهادة أنّ لا إله إلا الله وأنّ محمداً عبده ورسوله</a></li>
