--- a/src/app/pages/islam/provisions/provisions.component.html
+++ b/src/app/pages/islam/provisions/provisions.component.html
@@ -1,3 +1,4 @@
+<app-sub-menu></app-sub-menu>
 <div class="w-60 h-full shadow-md bg-white absolute" id="sidenavSecExample">
   <div class="pt-4 pb-2 px-6">
     <a href="#!">
