--- a/src/app/pages/islam/pillars/pillars.component.html
+++ b/src/app/pages/islam/pillars/pillars.component.html
@@ -1,9 +1,17 @@
 <app-sub-menu></app-sub-menu>
+<div class="grid grid-rows-6 grid-flow-col gap-4">
 
-<p>pillars works! اركان الاسلام</p>
-<ol><li><a routerLink="wiki/%D8%A7%D9%84%D8%AA%D9%88%D8%AD%D9%8A%D8%AF_%D9%81%D9%8A_%D8%A7%D9%84%D8%A5%D8%B3%D9%84%D8%A7%D9%85" title="التوحيد في الإسلام">شهادة أنّ لا إله إلا الله وأنّ محمداً عبده ورسوله</a></li>
-  <li><a routerLink="wiki/%D8%B5%D9%84%D8%A7%D8%A9" title="صلاة">إقامة الصلاة</a></li>
-  <li><a routerLink="wiki/%D8%B2%D9%83%D8%A7%D8%A9" title="زكاة">إيتاء الزكاة</a></li>
-  <li><a routerLink="wiki/%D8%B5%D9%88%D9%85" title="صوم">صوم رمضان</a></li>
-  <li><a routerLink="wiki/%D8%A7%D9%84%D8%AD%D8%AC_(%D8%AA%D9%88%D8%B6%D9%8A%D8%AD)" class="mw-disambig" title="الحج (توضيح)">حج البيت الحرام لمن استطاع إليه سبيلاً</a></li></ol>
+<div class="row-start-1 ">
+
+<app-aside></app-aside>
+</div>
+<div class="row-start-1">
+  <p [ngClass]="styleModeService.mode === 'light' ?
+  'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+  'max-w-2xl mx-auto my-6 text-center text-gray-300'">
+
+</p>
+
   <router-outlet></router-outlet>
+</div>
+</div>
