--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@
     content-visibility: auto;
   }
 }
+body{
+  letter-spacing: 1px;
+  // font-family: 'Source Sans Pro', sans-serif;
+}
 a{
   font-family: 'Droid Arabic Kufi', serif;
   word-spacing: 1px;
