--- a/src/app/pages/islam/creed/creed.component.html
+++ b/src/app/pages/islam/creed/creed.component.html
@@ -1,15 +1,24 @@
 <app-sub-menu></app-sub-menu>
 
-<p>creed works!
-العقيدة هي الايمان
-</p>
-https://mawdoo3.com/%D9%85%D8%A7_%D9%87%D9%8A_%D8%A7%D9%84%D8%B9%D9%82%D9%8A%D8%AF%D8%A9_%D8%A7%D9%84%D8%A5%D8%B3%D9%84%D8%A7%D9%85%D9%8A%D8%A9
-المرجئة
-الارجاء الاموي
+<div class="grid grid-rows-6 grid-flow-col gap-4">
 
-<p>ومن يكفر بالله وملائكته وكتبه ورسله فقض ضل سوئ السبيل </p>
-<p>هل الايمان بستية الاركان من اركان الايمان!</p>
-لا لانها ستصبح سبعة والسبعة ستصبح ثمانية الى الا نهاية
-وما تثبته نفسك من اختيار فانت مجبور حتى في اختيارك
+<div class="row-start-1">
 
-<router-outlet></router-outlet>
+<app-aside></app-aside>
+</div>
+<div class="row-start-1">
+  <p>
+    العقيدة هي الايمان
+    </p>
+    <!-- https://mawdoo3.com/%D9%85%D8%A7_%D9%87%D9%8A_%D8%A7%D9%84%D8%B9%D9%82%D9%8A%D8%AF%D8%A9_%D8%A7%D9%84%D8%A5%D8%B3%D9%84%D8%A7%D9%85%D9%8A%D8%A9 -->
+    المرجئة
+    الارجاء الاموي
+
+    <p>ومن يكفر بالله وملائكته وكتبه ورسله فقض ضل سوئ السبيل </p>
+    <p>هل الايمان بستية الاركان من اركان الايمان!</p>
+    لا لانها ستصبح سبعة والسبعة ستصبح ثمانية الى الا نهاية
+    وما تثبته نفسك من اختيار فانت مجبور حتى في اختيارك
+  <router-outlet></router-outlet>
+</div>
+</div>
+
