--- a/src/app/pages/islam/jurisprudence/jurisprudence.component.html
+++ b/src/app/pages/islam/jurisprudence/jurisprudence.component.html
@@ -1,6 +1,12 @@
 <app-sub-menu></app-sub-menu>
 
-<p>jurisprudence works!</p>
+<div class="grid grid-rows-6 grid-flow-col gap-4">
+
+<div class="row-start-1">
+
+<app-aside></app-aside>
+</div>
+<div class="row-start-1">
   <p>قال الله تعالى
     : وَمَا كَانَ الْمُؤْمِنُونَ لِيَنْفِرُوا كَافَّةً فَلَوْلَا نَفَرَ مِنْ كُلِّ فِرْقَةٍ مِنْهُمْ طَائِفَةٌ لِيَتَفَقَّهُوا فِي الدِّينِ وَلِيُنْذِرُوا قَوْمَهُمْ إِذَا رَجَعُوا إِلَيْهِمْ لَعَلَّهُمْ يَحْذَرُونَ التوبة: 122.
 
@@ -163,3 +169,7 @@
   هذه دراسة موجزة لأنواع الفقه والموقف من تغير الفتوى.. أسأل الله تعالى أن تكون وافية جلية لتعم الفائدة، وتسهم في توعية
   الأمة بدينها.
 </p>
+
+<router-outlet></router-outlet>
+</div>
+</div>
