--- a/src/app/pages/islam/rhetoric/rhetoric.component.html
+++ b/src/app/pages/islam/rhetoric/rhetoric.component.html
@@ -1,7 +1,14 @@
 <app-sub-menu></app-sub-menu>
-<p [ngClass]="styleModeService.mode === 'light' ?
-'max-w-2xl mx-auto my-6 text-center text-gray-500' :
-'max-w-2xl mx-auto my-6 text-center text-gray-300'">
+<div class="grid grid-rows-6 grid-flow-col gap-4">
+
+<div class="row-start-1 ">
+
+<app-aside></app-aside>
+</div>
+<div class="row-start-1">
+  <p [ngClass]="styleModeService.mode === 'light' ?
+  'max-w-2xl mx-auto my-6 text-center text-gray-500' :
+  'max-w-2xl mx-auto my-6 text-center text-gray-300'">
   الكتب التي نزلت من السماء نزلت باربع لغات
   السامية هي اللغة العربية المعقدة بها نطق ادم وانتهت الى سام ابن نوح عليه السلام
   بهذه اللغة نزلت منها مئة صحيفة على ابراهيم
@@ -15,6 +22,9 @@
   النحو والصرف
   لانهم اهل الحكمة
   الايمان يمان والفقه يمان والحكمة يمانية
-
 </p>
-<router-outlet></router-outlet>
+
+  <router-outlet></router-outlet>
+</div>
+</div>
+
