--- a/src/app/pages/islam/creed/prophets/prophets.component.html
+++ b/src/app/pages/islam/creed/prophets/prophets.component.html
@@ -1,3 +1,5 @@
+<app-aside></app-aside>
+<router-outlet></router-outlet>
 
 <p [ngClass]="styleModeService.mode === 'light' ?
 'max-w-2xl mx-auto my-6 text-center text-gray-500' :
@@ -10,5 +12,4 @@
 
 وبشكل عام، يعتبر الإسلام أن الأنبياء والرسل هم المرسلون من الله إلى البشرية لنقل رسالته، وتعتبر رسالتهم جزءًا من الوحي الإلهي الذي يجب على البشرية اتباعه وتطبيقه في حياتهم.
 </p>
-<<router-outlet></router-outlet>
->
+
