--- a/src/app/pages/islam/creed/creed.component.html
+++ b/src/app/pages/islam/creed/creed.component.html
@@ -1,2 +1,2 @@
-<app-sub-menu></app-sub-menu>
-<router-outlet></router-outlet>
+<!-- <app-sub-menu></app-sub-menu>
+<router-outlet></router-outlet> -->
