--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,21 +9,21 @@
     content-visibility: auto;
   }
 }
-body{
+body {
   letter-spacing: 1px;
   // font-family: 'Source Sans Pro', sans-serif;
 }
-a{
-  font-family: 'Droid Arabic Kufi', serif;
+a {
+  font-family: "Droid Arabic Kufi", serif;
   word-spacing: 1px;
 }
-a{
-  font-family: 'Droid Arabic Kufi', serif;
+a {
+  font-family: "Droid Arabic Kufi", serif;
   word-spacing: 1px;
 }
-p{
-  font-family: 'Droid Arabic Kufi', serif;
-  color:aliceblue;
+p {
+  font-family: "Droid Arabic Kufi", serif;
+  color: aliceblue;
 }
 .light-mode {
   background-color: #fff;
@@ -33,3 +33,37 @@ p{
   background-color: #333;
   color: #fff;
 }
+body {
+  background-color: #f5f5f5 !important; /* PearlWhite: Background color for the body */
+  color: #1a237e !important; /* DeepBlue: Text color for the body */
+  font-family: Roboto !important; /* Set a default font family */
+  line-height: 1.6; /* Set the line height for better readability */
+}
+
+h1 {
+  font-family: "Playfair Display" !important; /* Set a default font family */
+
+  color: #ffc107 !important; /* GoldenYellow: Color of the h1 heading */
+  font-size: 36px; /* Set the font size for the h1 heading */
+}
+
+h2 {
+  font-family: "Playfair Display" !important; /* Set a default font family */
+
+  color: #2e7d32 !important; /* ForestGreen: Color of the h2 heading */
+  font-size: 30px; /* Set the font size for the h2 heading */
+}
+
+p {
+  font-size: 16px; /* Set the font size for paragraphs */
+}
+
+/* You can apply the Earthy Brown color (#795548) to specific elements if needed */
+/* For example, if you want to set the color of a specific class, use the class selector like this: */
+/* .my-class { color: #795548; } */
+
+/* If you have any other elements that you want to style, simply add their corresponding CSS selectors and properties here. */
+/* For example, if you have an <a> (link) element and you want to set its color, you can do this: */
+/* a { color: <your-color>; } */
+
+/* You can also apply the colors to background colors of specific elements, borders, etc. Just use the corresponding CSS properties like background-color, border-color, etc. */
