--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+
+  <!-- Main Content Section -->
+  <main>
+    <section>
+        <h2>Main Content Section</h2>
+        <p>This is the main content area of your webpage. You can put your content here.</p>
+    </section>
+</main>
