--- a/src/app/header/mobile/mobile.component.scss
+++ b/src/app/header/mobile/mobile.component.scss
@@ -1,35 +1,81 @@
-.top{
-    max-width: 1440px;
-    width: 100vw;
-    /* Header */
-    height: 68px;
-    /* Auto layout */
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-between; 
-    padding: 8px;
+.top {
+  max-width: 1440px;
+  width: 100vw;
+  /* Header */
+  height: 68px;
+  /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
-.right{
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.right {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-.left{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.left {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 .logo img {
-    /* logo 1 */
-    width: 68px;
-    height: 68px;
-    /* Inside Auto Layout */
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+  /* logo 1 */
+  width: 68px;
+  height: 68px;
+  /* Inside Auto Layout */
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+/* profile  */
+
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
+.user-name {
+}
+
+.profile-pic {
+  width: 40px; /* Adjust size as needed */
+  height: 40px; /* Adjust size as needed */
+  border-radius: 50%; /* Make it circular */
+}
+
+/* search field */
+.search-bar {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background: rgba(24, 7, 7, 0.62);
+  height: 40px;
+  border-radius: 5px;
+}
+.search-bar input[type="text"] {
+  padding: 8px;
+  border: 0px solid #ccc;
+  width: 100%;
+}
+.search-bar button {
+  width: 35px;
+  padding: 0px;
+  background-color: rgb(138, 36, 36);
+  border-radius: 0 5px 5px 0px;
+
+  height: 100%;
+  cursor: pointer;
+}
+.search-menu {
+  position: relative;
+}
+.search-menu select {
+  width: 35px;
+  padding: 8px;
 }
