--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,49 +1,40 @@
-header{
-    width: 100vw;
-}
+@use '../../_variables' as vars;
 
-app-top{
-    // background: linear-gradient(90.00deg, rgb(93, 117, 165),rgb(76, 168, 197) 100%);
-    background: rgb(138, 177, 255);
+.main-header {
+  width: 100vw;
+  position: sticky;
+  top: 0;
+
+  app-top,
+  app-mobile {
+    background: vars.$color-primary;
     display: flex;
-    text-align: center;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0 20px;
+  }
 
-}
-app-mobile{
-    // background: linear-gradient(90.00deg, rgb(93, 117, 165),rgb(76, 168, 197) 100%);
-    background: rgb(138, 177, 255);
-    display: flex;
-    text-align: center;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-app-bottom {
+  app-bottom {
     width: 100%;
     height: 58px;
     display: flex;
-    background-color: #ffffff;
-    text-align: center;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-}
-app-mobile {
+    background-color: vars.$color-white;
+  }
+
+  app-mobile {
     display: none;
-}
-@media screen and (max-width: 777px) {
-    app-bottom {
-        display: none;
-    }
+  }
+
+  @media screen and (max-width: 777px) {
+    app-bottom,
     app-top {
-        display: none;
+      display: none;
     }
+
     app-mobile {
-        display: block;
+      display: block;
     }
+  }
 }
