--- a/src/styles/styles.form.scss
+++ b/src/styles/styles.form.scss
@@ -1,4 +1,4 @@
- @use '/src/styles/styles.variables.scss' as *;
+ @use './styles.variables.scss' as *;
 
 /* ============================
    Overall Form Styling
